Правки внесены, для фронтенда
